# semanatic-kitti-api-v2.0

./: .gitignore  pyproject.toml  requirements.txt
semantickitti/: laserscancomp.py  laserscanvis.py
semantickitti/scripts/: compare.py  content.py  count.py  evaluate_completion.py  evaluate_mos.py  evaluate_panoptic.py  evaluate_semantics.py  evaluate_semantics_by_distance.py  visualize.py  visualize_mos.py  visualize_voxels.py
