[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-kitti-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "glfw>=1.8.3",
    "imgui[glfw]>=1.0.0",
    "matplotlib>=2.2.3",
    "numpy>=1.24.0",
    "pyopengl>=3.1.0",
    "pyqt5>=5.8.1.1",
    "pyyaml>=5.1.1",
    "vispy>=0.5.3",
]

[project.optional-dependencies]
torch = [
    "torch>=1.1.0,<2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["semantickitti"]
